Xrddev 2751 confclient migration to quarkus (#2530)
* chore: configuration client migration to quarkus

Refs: XRDDEV-2751

* chore: configuration client migration to quarkus

Refs: XRDDEV-2751

* chore: separate globalconf beans from common files

* chore: add confclient quarkus test

Refs: XRDDEV-2751

---------

Co-authored-by: Ričardas Bučiūnas <ricardas.buciunas@nortal.com>

--- a/src/common/common-scheduler/build.gradle
+++ b/src/common/common-scheduler/build.gradle
@@ -5,6 +5,8 @@ plugins {
 dependencies {
     api project(':common:common-core')
 
+    implementation(libs.jakarta.cdi)
+
     api(libs.quartz) {
         exclude module: 'c3p0'
     }
