--- a/src/configuration-client/core/build.gradle
+++ b/src/configuration-client/core/build.gradle
@@ -1,22 +1,17 @@
 plugins {
     id 'java-library'
+    alias(libs.plugins.jandex)
 }
 
 dependencies {
     api project(':common:common-globalconf')
+    api project(':common:common-scheduler')
     api project(':common:common-jetty')
-    api project(':common:common-verifier')
     api project(':common:common-rpc')
+    api project(":configuration-client:confclient-model")
 
     api libs.commons.cli
-    api(platform(libs.springBoot.bom))
-    api('org.springframework:spring-context-support')
-    implementation("org.springframework.boot:spring-boot-starter")
 
-    testImplementation project(':common:common-test')
     testImplementation libs.wiremock.standalone
-}
-
-jar {
-    archiveBaseName = 'configuration-client-core'
+    testImplementation libs.mockito.jupiter
 }
