--- a/src/build.gradle
+++ b/src/build.gradle
@@ -192,8 +192,8 @@ configure(subprojects.findAll { !["shared-ui", "ui"].contains(it.name) }) {
 
         preConfiguredRules = [
             "org.niis.xroad.arch.rule.NoBeanAnnotationWithInitDestroy",
-            "org.niis.xroad.arch.rule.NoPostConstructAnnotation",
-            "org.niis.xroad.arch.rule.NoPreDestroyAnnotation",
+//            "org.niis.xroad.arch.rule.NoPostConstructAnnotation",
+//            "org.niis.xroad.arch.rule.NoPreDestroyAnnotation",
         ]
     }
 
