--- a/src/monitor/core/build.gradle
+++ b/src/monitor/core/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation project(':monitor-common')
     implementation project(':signer-protocol')
     implementation project(':serverconf')
+    implementation('org.springframework:spring-context-support')
 
     implementation libs.slf4j.api
     implementation libs.bundles.metrics
