--- a/src/op-monitor-daemon/core/build.gradle
+++ b/src/op-monitor-daemon/core/build.gradle
@@ -16,6 +16,8 @@ sourceSets {
 }
 
 dependencies {
+    api(platform(libs.springBoot.bom))
+
     implementation libs.jakarta.validationApi
     implementation libs.bundles.metrics
 
@@ -25,6 +27,8 @@ dependencies {
     implementation project(':common:common-jetty')
     implementation project(':common:common-db')
     implementation project(':common:common-op-monitoring')
+
+    api('org.springframework:spring-context-support')
 
     // Using HSQLDB for an in-memory database in tests.
     testImplementation libs.hsqldb
