--- a/src/monitor/application/src/main/resources/application-native.yaml
+++ b/src/monitor/application/src/main/resources/application-native.yaml
@@ -1,2 +1,10 @@
+quarkus:
+  package:
+    output-directory: libs
+    output-name: monitor-1.0
+    jar:
+      type: uber-jar
+      add-runner-suffix: false
+
 logging:
   config: classpath:logback-native.xml
