--- a/src/security-server/ds/runtime/control-plane/src/main/resources/application.yaml
+++ b/src/security-server/ds/runtime/control-plane/src/main/resources/application.yaml
@@ -11,8 +11,8 @@ xroad:
       cache-period: 60
       client-cache-size: 100
       service-cache-size: 1000
-      service-endpoints-cache-size: 100_000
-      acl-cache-size: 100_000
+      service-endpoints-cache-size: 100000
+      acl-cache-size: 100000
       hibernate:
         dialect: ee.ria.xroad.common.db.CustomPostgreSQLDialect
         connection.driver_class: org.postgresql.Driver
