chore: monitor runtime quarkus profile
Refs: XRDDEV-2751

--- a/src/packages/src/xroad/common/monitor/etc/xroad/services/monitor.conf
+++ b/src/packages/src/xroad/common/monitor/etc/xroad/services/monitor.conf
@@ -15,6 +15,7 @@ do
 done
 
 XROAD_MONITOR_PARAMS=" -Xmx256m -XX:MaxMetaspaceSize=128m \
+-Dquarkus.profile=native,secret-store \
 -Dserverconf.hibernate.hikari.maximumPoolSize=1 $XROAD_MONITOR_PARAMS"
 
 apply_local_conf XROAD_MONITOR_PARAMS
