chore: monitor app logging config
Refs: XRDDEV-2751

--- a/src/monitor/application/src/main/resources/application.yaml
+++ b/src/monitor/application/src/main/resources/application.yaml
@@ -41,4 +41,5 @@ xroad:
         connection.driver_class: org.postgresql.Driver
         connection.url: jdbc:postgresql://127.0.0.1:5432/serverconf
         hikari.dataSource.currentSchema: serverconf,public
+        hikari.maximumPoolSize: 1
         jdbc.use_streams_for_binary: true
