--- a/src/packages/src/xroad/common/monitor/etc/xroad/services/monitor.conf
+++ b/src/packages/src/xroad/common/monitor/etc/xroad/services/monitor.conf
@@ -14,8 +14,7 @@ do
  fi
 done
 
-XROAD_MONITOR_PARAMS=" -Xmx256m -XX:MaxMetaspaceSize=128m \
--Dquarkus.profile=native,secret-store \
--Dserverconf.hibernate.hikari.maximumPoolSize=1 $XROAD_MONITOR_PARAMS"
+XROAD_MONITOR_PARAMS=" -Xmx256m -XX:MaxMetaspaceSize=80m \
+-Dquarkus.profile=native,secret-store $XROAD_MONITOR_PARAMS"
 
 apply_local_conf XROAD_MONITOR_PARAMS
