--- a/src/monitor/application/src/main/resources/application-native.yaml
+++ b/src/monitor/application/src/main/resources/application-native.yaml
@@ -1,2 +1,21 @@
-logging:
-  config: classpath:logback-native.xml
+quarkus:
+  package:
+    output-directory: libs
+    output-name: monitor-1.0
+    jar:
+      type: uber-jar
+      add-runner-suffix: false
+
+  log:
+    level: INFO
+    console:
+      enable: false
+    file:
+      enable: true
+      path: /var/log/xroad/monitor.log
+      format: "%d{yyyy-MM-dd'T'HH:mm:ss.SSSXXX} [%t] %-5p %c{36} - %s%e%n"
+      encoding: UTF-8
+      rotation:
+        max-file-size: 100m
+        file-suffix: .yyyy-MM-dd.zip
+
