--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,14 +5,12 @@ updates:
     schedule:
       interval: "weekly"
     groups:
-      spring-minor-patch:
+      spring-patch:
         applies-to: version-updates
-        update-types:
-          - "minor"
-          - "patch"
         patterns:
           - "org.springframework.boot*"
           - "org.springframework.cloud*"
+          - "io.opentelemetry.instrumentation*"
       grpc-minor-patch:
         applies-to: version-updates
         update-types:
