feat: use gradle convention plugins to simplify project configuration
Refs: XRDDEV-2826

--- a/src/addons/hwtoken/build.gradle
+++ b/src/addons/hwtoken/build.gradle
@@ -1,3 +1,6 @@
+plugins {
+    id("xroad.java-conventions")
+}
 dependencies {
     implementation(project(':signer:core')) {
         exclude group: 'org.springframework', module: 'spring-context'
