--- a/src/central-server/admin-service/api-client/build.gradle
+++ b/src/central-server/admin-service/api-client/build.gradle
@@ -1,8 +1,9 @@
 plugins {
-    id 'java-library'
+    id("xroad.java-conventions")
 }
 
 dependencies {
+    api(platform(libs.springCloud.bom))
     api project(':central-server:openapi-model')
 
     implementation project(':common:common-core')
