--- a/src/central-server/management-service/core-api/build.gradle
+++ b/src/central-server/management-service/core-api/build.gradle
@@ -1,8 +1,9 @@
 plugins {
-    id "java-library"
+    id("xroad.java-conventions")
 }
 
 dependencies {
+    api(platform(libs.springBoot.bom))
     api project(':common:common-management-request')
     api(project(':common:common-message')) {
         exclude group: 'org.eclipse.jetty'
