--- a/src/central-server/management-service/infra-api-soap/build.gradle
+++ b/src/central-server/management-service/infra-api-soap/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id("xroad.java-conventions")
+}
+
 dependencies {
     implementation(project(':common:common-message'))
     implementation project(":central-server:management-service:core-api")
