--- a/src/addons/messagelog/messagelog-db/build.gradle
+++ b/src/addons/messagelog/messagelog-db/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id("xroad.java-conventions")
+}
+
 dependencies {
     implementation(project(':common:common-db'))
     implementation(project(':common:common-message'))
