--- a/src/addons/op-monitoring/build.gradle
+++ b/src/addons/op-monitoring/build.gradle
@@ -1,3 +1,8 @@
+plugins {
+    id("xroad.java-conventions")
+    id("xroad.java-exec-conventions")
+}
+
 dependencies {
     implementation project(':common:common-op-monitoring')
 
