--- a/src/addons/proxymonitor/common/build.gradle
+++ b/src/addons/proxymonitor/common/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id("xroad.java-conventions")
+}
+
 project.ext.schemaTargetDir = layout.buildDirectory.dir("generated-sources").get().asFile
 
 configurations {
