--- a/src/addons/proxymonitor/metaservice/build.gradle
+++ b/src/addons/proxymonitor/metaservice/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'java'
+    id("xroad.java-conventions")
+    id("xroad.java-exec-conventions")
     alias(libs.plugins.shadow)
 }
 
