--- a/src/asic-util/build.gradle
+++ b/src/asic-util/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id("xroad.java-conventions")
+}
+
 dependencies {
     implementation project(':common:common-message')
     implementation project(':common:common-verifier')
