--- a/src/central-server/admin-service/core-api/build.gradle
+++ b/src/central-server/admin-service/core-api/build.gradle
@@ -1,8 +1,9 @@
 plugins {
-    id 'java-library'
+    id("xroad.java-conventions")
 }
 
 dependencies {
+    api(platform(libs.springBoot.bom))
     api project(':common:common-globalconf')
     api project(':signer-protocol')
     api project(':common:common-admin-api')
