--- a/src/central-server/admin-service/core/build.gradle
+++ b/src/central-server/admin-service/core/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java-library'
+    id("xroad.java-conventions")
 }
 
 
@@ -11,6 +11,8 @@ configurations {
 
 dependencies {
     annotationProcessor(libs.hibernate.jpamodelgen)
+    annotationProcessor(libs.mapstructProcessor)
+    annotationProcessor(libs.lombokMapstructBinding)
 
     api project(':central-server:admin-service:core-api')
     api(project(":common:common-api-throttling"))
@@ -24,6 +26,7 @@ dependencies {
     api("jakarta.persistence:jakarta.persistence-api")
 
     implementation(libs.apache.commonsCompress)
+    implementation(libs.mapstruct)
 
     testImplementation project(':common:common-test')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
@@ -40,4 +43,10 @@ sourceSets {
             layout.buildDirectory.dir("generated/sources/annotationProcessor/java/main")
         ]
     }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+        "-Amapstruct.unmappedTargetPolicy=ERROR"
+    ]
 }
