--- a/src/op-monitor-daemon/core/build.gradle
+++ b/src/op-monitor-daemon/core/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java-library'
+    id("xroad.java-conventions")
 }
 
 project.ext.schemaTargetDir = layout.buildDirectory.dir("generated-sources").get().asFile
