--- a/src/proxy/application/build.gradle
+++ b/src/proxy/application/build.gradle
@@ -1,13 +1,7 @@
 plugins {
+    id("xroad.java-conventions")
+    id("xroad.java-exec-conventions")
     alias(libs.plugins.shadow)
-}
-
-sourceSets {
-    intTest {
-        resources {
-            srcDir '../../common/common-int-test/src/main/resources/'
-        }
-    }
 }
 
 dependencies {
@@ -47,7 +41,17 @@ shadowJar {
     mergeServiceFiles()
 }
 
-testJar.enabled = true
+tasks.register('testJar', Jar) {
+    archiveClassifier = 'test'
+    from sourceSets.test.output
+}
+
+configurations {
+    testArtifacts.extendsFrom testRuntime
+}
+artifacts {
+    testArtifacts testJar
+}
 assemble.finalizedBy shadowJar
 
 apply plugin: "jacoco"
