--- a/src/proxy/core/build.gradle
+++ b/src/proxy/core/build.gradle
@@ -1,5 +1,7 @@
 plugins {
-    id 'java-library'
+    id("xroad.java-conventions")
+    id("xroad.java-exec-conventions")
+    id("xroad.int-test-conventions")
 }
 
 sourceSets {
@@ -41,9 +43,19 @@ jar {
     archiveBaseName = 'proxy-core'
 }
 
-testJar {
-    enabled = true
+tasks.register('testJar', Jar) {
     archiveBaseName = 'proxy-core'
+    archiveClassifier = 'test'
+
+    from sourceSets.test.output
+}
+
+configurations {
+    testArtifacts.extendsFrom testRuntime
+}
+
+artifacts {
+    testArtifacts testJar
 }
 
 apply plugin: "jacoco"
