--- a/src/security-server/admin-service/infra-jpa/build.gradle
+++ b/src/security-server/admin-service/infra-jpa/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id("xroad.java-conventions")
     id 'java-library'
 }
 
@@ -16,8 +17,4 @@ tasks.register('changelogJar', Jar) {
 
 artifacts {
     changelogJar changelogJar
-}
-
-archUnit {
-    skip = true
 }
