--- a/src/security-server/admin-service/int-test/build.gradle
+++ b/src/security-server/admin-service/int-test/build.gradle
@@ -1,3 +1,8 @@
+plugins{
+    id("xroad.java-conventions")
+    id 'xroad.int-test-conventions'
+}
+
 configurations {
     dist {
         canBeConsumed = false
@@ -17,10 +22,6 @@ dependencies {
     intTestImplementation(libs.liquibase.core)
     intTestImplementation(libs.postgresql)
     intTestImplementation(libs.lombok)
-}
-
-test {
-    useJUnitPlatform()
 }
 
 tasks.register('intTest', Test) {
