chore: small fixes
Refs: XRDDEV-2826

--- a/src/central-server/admin-service/ui/license-check-and-add-config.json
+++ b/src/central-server/admin-service/ui/license-check-and-add-config.json
@@ -14,7 +14,7 @@
     "**/*.config.js",
     "**/*.cer",
     "**/*.log",
-    "**/*.gradle",
+    "**/*.gradle.kts",
     "**/*.yaml*",
     "**/.*",
     "src/openapi-types/",
