--- a/src/security-server/admin-service/ui/license-check-and-add-config.json
+++ b/src/security-server/admin-service/ui/license-check-and-add-config.json
@@ -13,7 +13,7 @@
     "**/*.cer",
     "**/*.log",
     "**/*.yaml*",
-    "**/*.gradle",
+    "**/*.gradle.kts",
     "**/.*",
     "src/openapi-types/",
     "**/openapi-types.ts",
