--- a/src/security-server/admin-service/application/build.gradle
+++ b/src/security-server/admin-service/application/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation(libs.swagger.parserV3)
     implementation(libs.jakarta.validationApi)
     implementation(libs.logback.access) {
-        exclude group: 'org.apache.tomcat', module: 'tomcat-catalina'
+        exclude group: 'org.apache.tomcat'
     }
 
     testImplementation(platform(libs.springBoot.bom))
