chore: fix after merge

--- a/src/addons/messagelog/messagelog-addon/asic/build.gradle
+++ b/src/addons/messagelog/messagelog-addon/asic/build.gradle
@@ -1,4 +1,6 @@
-
+plugins {
+    id("xroad.java-conventions")
+}
 
 dependencies {
     implementation(project(':addons:messagelog:messagelog-addon:core'))
