--- a/src/packages/src/xroad/common/op-monitor/etc/xroad/services/opmonitor.conf
+++ b/src/packages/src/xroad/common/op-monitor/etc/xroad/services/opmonitor.conf
@@ -7,6 +7,6 @@
 
 CUSTOM_OPMON_PARAMS="$XROAD_OPMON_PARAMS"
 
-XROAD_OPMON_PARAMS=" -Xms50m -Xmx256m -XX:MaxMetaspaceSize=128m $XROAD_OPMON_PARAMS"
+XROAD_OPMON_PARAMS=" -Xms50m -Xmx256m -XX:MaxMetaspaceSize=128m -Dquarkus.profile=native,secret-store $XROAD_OPMON_PARAMS"
 
 apply_local_conf XROAD_OPMON_PARAMS
