--- a/src/op-monitor-daemon/application/build.gradle
+++ b/src/op-monitor-daemon/application/build.gradle
@@ -1,27 +1,16 @@
 plugins {
     id("xroad.java-conventions")
-    alias(libs.plugins.springBoot)
+    id("xroad.java-exec-conventions")
+    alias(libs.plugins.quarkus)
 }
 
 dependencies {
-    implementation project(':common:common-service-bootstrap')
+    implementation(platform(libs.quarkus.bom))
 
-    implementation project(':common:common-core')
-    implementation project(':common:common-properties')
-    implementation project(':common:common-rpc')
+    implementation(project(':common:common-quarkus-bootstrap'))
     implementation project(':op-monitor-daemon:core')
-}
 
-bootJar {
-    enabled = true
-    archiveBaseName = 'op-monitor-daemon'
-    manifest {
-        attributes(
-            'Implementation-Title': 'X-Road Operational Monitoring',
-            'Implementation-Version': "$xroadVersion-$xroadBuildType",
-            'Main-Class': 'org.springframework.boot.loader.launch.PropertiesLauncher'
-        )
-    }
+    testImplementation(libs.quarkus.junit5)
 }
 
 jar.enabled = false
