chore: conflient use logging confing from common file
Refs: XRDDEV-2751

--- a/src/monitor/application/src/main/resources/application.yaml
+++ b/src/monitor/application/src/main/resources/application.yaml
@@ -15,6 +15,7 @@ quarkus:
     locations:
       - xroad-common.yaml
       - xroad-ss-common.yaml
+      - xroad-logging.yaml
 
 #server:
 #  port: 5999
