chore: messagelog archiver migration to quarkus
Refs: XRDDEV-2751

--- a/src/addons/messagelog/messagelog-archiver/application/build.gradle
+++ b/src/addons/messagelog/messagelog-archiver/application/build.gradle
@@ -1,32 +1,20 @@
 plugins {
     id("xroad.java-conventions")
     id("xroad.java-exec-conventions")
-    alias(libs.plugins.springBoot)
+    alias(libs.plugins.quarkus)
 }
 
 dependencies {
-    implementation(platform(libs.springCloud.bom))
+    implementation(platform(libs.quarkus.bom))
 
-    implementation project(':common:common-service-bootstrap')
+    implementation(project(':common:common-quarkus-bootstrap'))
     implementation(project(':addons:messagelog:messagelog-archiver:core'))
 
-    implementation(project(':common:common-core'))
-    implementation project(':common:common-properties')
-    implementation project(':common:common-rpc')
-}
+//    implementation(project(':common:common-core'))
+//    implementation project(':common:common-properties')
+//    implementation project(':common:common-rpc')
 
-bootJar {
-    enabled = true
-    archiveBaseName = 'messagelog-archiver'
-    archiveVersion = ''
-
-    manifest {
-        attributes(
-            'Implementation-Title': 'X-Road Message Log Archiver',
-            'Implementation-Version': "$xroadVersion-$xroadBuildType",
-            'Main-Class': 'org.springframework.boot.loader.launch.PropertiesLauncher'
-        )
-    }
+    testImplementation(libs.quarkus.junit5)
 }
 
 jar.enabled = false
