--- a/src/addons/messagelog/messagelog-archiver/application/src/main/resources/application-secret-store.yaml
+++ b/src/addons/messagelog/messagelog-archiver/application/src/main/resources/application-secret-store.yaml
@@ -1,11 +1,16 @@
-spring:
-  config:
-    import:
-      - vault://xrd-secret/messagelog?prefix=secrets.messagelog.
+quarkus:
+  vault:
+    url: "${XROAD_SECRET_STORE_SCHEME:http}://${XROAD_SECRET_STORE_HOST:127.0.0.1}:${XROAD_SECRET_STORE_PORT:8200}"
+    authentication:
+      client-token: "${XROAD_SECRET_STORE_TOKEN}"
+    kv-secret-engine-version: 1
+    kv-secret-engine-mount-path: xrd-secret
+    secret-config-kv-path:
+      "secrets-messagelog": messagelog
 
 xroad:
   common:
   messagelog:
     hibernate:
-      connection.username: "${secrets.messagelog.username}"
-      connection.password: "${secrets.messagelog.password}"
+      connection.username: "${secrets-messagelog.username}"
+      connection.password: "${secrets-messagelog.password}"
