--- a/src/common/common-messagelog/build.gradle
+++ b/src/common/common-messagelog/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id("xroad.java-conventions")
+    alias(libs.plugins.jandex)
 }
 dependencies {
     implementation project(':common:common-message')
