feat: reorganize serverconf modules
Refs: XRDDEV-2826

--- a/src/addons/metaservice/build.gradle
+++ b/src/addons/metaservice/build.gradle
@@ -6,9 +6,9 @@ plugins {
 dependencies {
     implementation project(':proxy:core')
     implementation project(':common:common-jetty')
-    implementation project(':serverconf')
     implementation project(":common:common-op-monitoring")
-    implementation project(":lib:globalconf-spring")
+    implementation project(":lib:globalconf-impl")
+    implementation project(":lib:serverconf-impl")
     implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml"
 
     testImplementation project(':common:common-test')
