--- a/src/proxy/application/build.gradle
+++ b/src/proxy/application/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     testImplementation(project(':common:common-jetty'))
     testImplementation(project(':common:common-message'))
     testImplementation(project(':common:common-test'))
-    testImplementation(project(':serverconf'))
+//    testImplementation(project(':serverconf'))
     testImplementation project(path: ":proxy:core", configuration: 'testArtifacts')
 }
 
