--- a/src/asicverifier/build.gradle
+++ b/src/asicverifier/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 dependencies {
-    implementation project(":lib:globalconf-spring")
+    implementation project(":lib:globalconf-impl")
     implementation project(':asic-util')
 
     implementation(project(':common:common-core'))
