--- a/src/central-server/admin-service/infra-api-rest/build.gradle
+++ b/src/central-server/admin-service/infra-api-rest/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     implementation project(':central-server:admin-service:core-api')
     implementation project(':central-server:openapi-model')
     implementation project(':common:common-domain')
-    implementation project(":lib:globalconf-spring")
+    implementation project(":lib:globalconf-model")
     implementation project(':signer-protocol')
     implementation project(':common:common-admin-api')
 
