--- a/src/common/common-properties/src/main/resources/xroad-logging.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-logging.yaml
@@ -2,9 +2,14 @@ quarkus:
   log:
     level: INFO
     file:
-      format: "%d{yyyy-MM-dd'T'HH:mm:ss.SSSXXX} [%t] %-5p %c{36} - %s%e%n"
+      format: "%d{yyyy-MM-dd'T'HH:mm:ss.SSSXXX} %-5p [%t] %c{1.} - %s%e%n"
       encoding: UTF-8
       rotation:
         max-file-size: 100m
         file-suffix: .yyyy-MM-dd.zip
-
+        rotate-on-boot: false
+    syslog:
+      endpoint: 127.0.0.1:514
+      protocol: udp
+      facility: "local-use-0"
+      filter: audit-log-filter
