--- a/src/configuration-client/application/build.gradle
+++ b/src/configuration-client/application/build.gradle
@@ -35,13 +35,11 @@ dependencies {
     implementation(libs.quarkus.quartz)
     implementation(libs.quarkus.springBoot.di)
 
-//    implementation project(':common:common-core')
-//    implementation project(':common:common-rpc')
     implementation project(':configuration-client:core')
 
-//    testImplementation project(':common:common-test')
     testImplementation(libs.junit.system.exit)
     testImplementation(libs.quarkus.junit5)
+    testImplementation(testFixtures(project(":common:common-rpc")))
 }
 
 jar.enabled = false
