--- a/src/monitor/application/build.gradle
+++ b/src/monitor/application/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation project(':monitor:core')
 
     testImplementation(libs.quarkus.junit5)
+    testImplementation(testFixtures(project(":common:common-rpc")))
 }
 
 jar.enabled = false
