--- a/src/addons/messagelog/messagelog-archiver/application/build.gradle
+++ b/src/addons/messagelog/messagelog-archiver/application/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     implementation(project(':addons:messagelog:messagelog-archiver:core'))
 
     testImplementation(libs.quarkus.junit5)
+    testImplementation(testFixtures(project(":common:common-rpc")))
 }
 
 jar.enabled = false
