feat: reorganize monitor modules
Refs: XRDDEV-2826

--- a/ansible/vars_files/ss_modules.yml
+++ b/ansible/vars_files/ss_modules.yml
@@ -1,7 +1,7 @@
 ---
 ss_modules:
   monitor:
-    dir: monitor
+    dir: service/monitor/monitor-application
     build: build
     lib: monitor-1.0.jar
     target: /usr/share/xroad/jlib
