--- a/src/security-server/admin-service/application/build.gradle
+++ b/src/security-server/admin-service/application/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation(project(':common:common-api-throttling'))
     implementation(project(":common:common-mail"))
     implementation(project(":security-server:openapi-model"))
-    implementation(project(':monitor-common'))
+    implementation(project(':service:monitor:monitor-api'))
 
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.springframework.boot:spring-boot-starter-web")
